// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkScanner.parseNmapXml > multi-host-cidr: returns findings for all 3 hosts open ports 1`] = `
[
  {
    "extrainfo": undefined,
    "ip": "192.168.1.10",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "22",
    "product": "OpenSSH",
    "service": "ssh",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "host1.corp.local",
    "type": "port",
    "version": "8.9p1",
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.10",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "80",
    "product": "Apache httpd",
    "service": "http",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "host1.corp.local",
    "type": "port",
    "version": "2.4.54",
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.20",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "443",
    "product": "nginx",
    "service": "https",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "host2.corp.local",
    "type": "port",
    "version": "1.22.1",
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.30",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "3389",
    "product": "Microsoft Terminal Services",
    "service": "ms-wbt-server",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "192.168.1.0/24",
    "type": "port",
    "version": undefined,
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.30",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "445",
    "product": undefined,
    "service": "microsoft-ds",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "192.168.1.0/24",
    "type": "port",
    "version": undefined,
  },
]
`;

exports[`NetworkScanner.parseNmapXml > os-detection-cpe: populates osCpe array from multiple osclass elements 1`] = `
[
  {
    "extrainfo": undefined,
    "ip": "192.168.1.11",
    "nseScripts": undefined,
    "osAccuracy": 97,
    "osCpe": [
      "cpe:/o:linux:linux_kernel:5.15",
      "cpe:/o:canonical:ubuntu_linux:22.04",
    ],
    "osInfo": "Linux 5.15",
    "osName": "Linux 5.15",
    "port": "22",
    "product": "OpenSSH",
    "service": "ssh",
    "serviceCpe": "cpe:/a:openbsd:openssh:8.9p1",
    "severity": "medium",
    "state": "open",
    "target": "linux-srv.corp.local",
    "type": "port",
    "version": "8.9p1 Ubuntu 3ubuntu0.6",
  },
]
`;

exports[`NetworkScanner.parseNmapXml > rdp-with-os-detection: populates osName, osAccuracy, osCpe from XML 1`] = `
[
  {
    "extrainfo": undefined,
    "ip": "192.168.1.20",
    "nseScripts": undefined,
    "osAccuracy": 98,
    "osCpe": [
      "cpe:/o:microsoft:windows_server_2019",
    ],
    "osInfo": "Windows Server 2019",
    "osName": "Windows Server 2019",
    "port": "3389",
    "product": "Microsoft Terminal Services",
    "service": "ms-wbt-server",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "srv-rdp.corp.local",
    "type": "port",
    "version": undefined,
  },
]
`;

exports[`NetworkScanner.parseNmapXml > service-version-cpe: populates product, version, extrainfo, serviceCpe fields 1`] = `
[
  {
    "extrainfo": "RTM; build 15.00.2000; SP1",
    "ip": "192.168.1.60",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "1433",
    "product": "Microsoft SQL Server",
    "service": "ms-sql-s",
    "serviceCpe": "cpe:/a:microsoft:sql_server:2019",
    "severity": "medium",
    "state": "open",
    "target": "mssql.corp.local",
    "type": "port",
    "version": "2019",
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.60",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "443",
    "product": "Microsoft IIS httpd",
    "service": "https",
    "serviceCpe": "cpe:/a:microsoft:iis:10.0",
    "severity": "medium",
    "state": "open",
    "target": "mssql.corp.local",
    "type": "port",
    "version": "10",
  },
  {
    "extrainfo": "SSDP/UPnP",
    "ip": "192.168.1.60",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "5985",
    "product": "Microsoft HTTPAPI httpd",
    "service": "http",
    "serviceCpe": "cpe:/a:microsoft:http_api:2.0",
    "severity": "medium",
    "state": "open",
    "target": "mssql.corp.local",
    "type": "port",
    "version": "2",
  },
]
`;

exports[`NetworkScanner.parseNmapXml > single-host-all-fields: populates OS, service version, and NSE script fields 1`] = `
[
  {
    "extrainfo": "workgroup: CORP",
    "ip": "192.168.1.50",
    "nseScripts": [
      {
        "cves": undefined,
        "exploitState": undefined,
        "id": "smb-security-mode",
        "output": "&#xa;  account_used: guest&#xa;  authentication_level: user&#xa;  challenge_response: supported&#xa;  message_signing: disabled (dangerous, but default)",
      },
      {
        "cves": undefined,
        "exploitState": undefined,
        "id": "smb-vuln-ms17-010",
        "output": "VULNERABLE",
      },
    ],
    "osAccuracy": 98,
    "osCpe": [
      "cpe:/o:microsoft:windows_server_2019",
      "cpe:/o:microsoft:windows_server_2019::datacenter",
    ],
    "osInfo": "Windows Server 2019",
    "osName": "Windows Server 2019",
    "port": "445",
    "product": "Microsoft Windows Server 2019",
    "service": "microsoft-ds",
    "serviceCpe": "cpe:/o:microsoft:windows_server_2019",
    "severity": "medium",
    "state": "open",
    "target": "fullhost.corp.local",
    "type": "port",
    "version": "datacenter",
  },
  {
    "extrainfo": undefined,
    "ip": "192.168.1.50",
    "nseScripts": undefined,
    "osAccuracy": 98,
    "osCpe": [
      "cpe:/o:microsoft:windows_server_2019",
      "cpe:/o:microsoft:windows_server_2019::datacenter",
    ],
    "osInfo": "Windows Server 2019",
    "osName": "Windows Server 2019",
    "port": "3389",
    "product": "Microsoft Terminal Services",
    "service": "ms-wbt-server",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "fullhost.corp.local",
    "type": "port",
    "version": undefined,
  },
]
`;

exports[`NetworkScanner.parseNmapXml > smb-open-no-vuln: parses single host with SMB port open 1`] = `
[
  {
    "extrainfo": "workgroup: CORP",
    "ip": "192.168.1.10",
    "nseScripts": undefined,
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "445",
    "product": "Microsoft Windows Server 2019",
    "service": "microsoft-ds",
    "serviceCpe": "cpe:/o:microsoft:windows_server_2019",
    "severity": "medium",
    "state": "open",
    "target": "dc01.corp.local",
    "type": "port",
    "version": undefined,
  },
]
`;

exports[`NetworkScanner.parseNmapXml > vuln-ms17-010: captures NSE script with CVE reference 1`] = `
[
  {
    "extrainfo": undefined,
    "ip": "192.168.1.1",
    "nseScripts": [
      {
        "cves": [
          "CVE-2017-0144",
        ],
        "exploitState": "VULNERABLE&#xa;",
        "id": "smb-vuln-ms17-010",
        "output": "&#xa;  VULNERABLE:&#xa;  Remote Code Execution vulnerability in Microsoft SMBv1 servers (ms17-010)&#xa;    State: VULNERABLE&#xa;    IDs:  CVE:CVE-2017-0144&#xa;    Risk factor: HIGH&#xa;    Description:&#xa;      A critical remote code execution vulnerability exists in Microsoft SMBv1&#xa;       servers (ms17-010).&#xa;    Disclosure date: 2017-03-14&#xa;    References:&#xa;      https://technet.microsoft.com/en-us/library/security/ms17-010.aspx&#xa;      https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2017-0144&#xa;",
      },
    ],
    "osAccuracy": undefined,
    "osCpe": undefined,
    "osInfo": undefined,
    "osName": undefined,
    "port": "445",
    "product": "Windows 7 Microsoft-ds",
    "service": "microsoft-ds",
    "serviceCpe": undefined,
    "severity": "medium",
    "state": "open",
    "target": "192.168.1.1",
    "type": "port",
    "version": undefined,
  },
]
`;
